src/objects/QB_Credit_Note_Header__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR2_Customer__c</fullName>
        <formula>IF ( Left (Customer__c,8)=&quot;BGE Home&quot;, &quot;BGE Home&quot;, Customer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLines__c</fullName>
        <label>NumberofLines</label>
        <summaryForeignKey>QB_Credit_Notes__c.QB_Credit_Note_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RefNumber__c</fullName>
        <label>RefNumber</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrnDate__c</fullName>
        <label>TrnDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrxID__c</fullName>
        <label>TrxID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>QB Credit Note Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>IR2_Customer__c</columns>
        <columns>NumberofLines__c</columns>
        <columns>Processed__c</columns>
        <columns>RefNumber__c</columns>
        <columns>TrnDate__c</columns>
        <columns>TrxID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>IR2_Customer__c</columns>
        <columns>NumberofLines__c</columns>
        <columns>Processed__c</columns>
        <columns>RefNumber__c</columns>
        <columns>TrnDate__c</columns>
        <columns>TrxID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unprocessed</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CNH-{000000}</displayFormat>
        <label>QB Credit Note Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Credit Notes Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>